<resources>
    <string name="app_name">A Brew for You</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_beer">Beer</string>
    <string name="title_activity_breweries">Breweries</string>
    <string name="title_activity_town">Town</string>
    <string name="title_activity_state">State</string>
    <string name="title_activity_seasons">Seasons</string>
    <string name="title_activity_beer_list">List of Beer</string>

    <string name="beer_title">Search By Type</string>
    <string name="title_activity_seasons_beer_list">Beer List by Season</string>
    <string name="title_activity_state_beer_list">Breweries by State</string>

    <string name="title_activity_beer_info">Beer Info</string>
    <string name="title_activity_map">Map</string>
    <string name="ABV">Alcohol By Volume: </string>
    <string name="Brewery">Brewery: </string>

    <string name="home_breweries">Breweries</string>
    <string name="home_beer">Beer</string>
    <string name="home_state">State</string>
    <string name="home_town">Town</string>
    <string name="home_season">Season</string>
    <string name="home_map">Map</string>

    <string name="sortingTypeAlphabetic">A - Z</string>

    <string name="banner_ad_unit_id">ca-app-pub-6225081440194649/5072239612</string>

    <string-array name="type_of_beer">
        <item>Dubbel</item>
        <item>Tripel</item>
        <item>Ale</item>
        <item>Lager</item>
        <item>Pale Ale</item>
        <item>Porter</item>
        <item>Barley Wine</item>
        <item>Witbier</item>
        <item>IPA</item>
        <item>Pilsener</item>
        <item>Stout</item>
        <item>Hefeweizen</item>
    </string-array>

    <string name="NO_BEER_FOUND_FOR_BREWERY">No Beer found for Brewery</string>
    <string name="NO_BEER_FOUND_OF_GIVEN_TYPE">No Beer found of given type</string>
    <string name="NO_BEER_FOUND_FOR_GIVEN_SEASON">No Beer found for given Season</string>
    <string name="NO_BREWERIES_FOUND_FOR_TOWN">No Breweries found for given Town</string>

    <string name="title_activity_loading_home_screen">LoadingHomeScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
