<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Home"
    android:background="#3B5998">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/homeTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:textColor="#ffffff" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homeTitle"
        android:layout_above="@+id/adView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:weightSum="6">

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".9"
            android:text="@string/home_breweries"
            android:id="@+id/btn_breweries"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".9"
            android:text="@string/home_beer"
            android:id="@+id/btn_beer"
            android:background="@drawable/custom_button"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".9"
            android:text="@string/home_town"
            android:id="@+id/btn_town"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".9"
            android:text="@string/home_state"
            android:id="@+id/btn_state"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".9"
            android:text="@string/home_season"
            android:id="@+id/btn_season"
            android:background="@drawable/custom_button"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".9"
            android:text="@string/home_map"
            android:id="@+id/btnMap"
            android:background="@drawable/custom_button"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
